--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
+        android:visibility="gone"
         android:background="@drawable/papierpeint"/>
 
     <RelativeLayout
@@ -29,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tabs"
+                app:tabMode="scrollable"
                 app:tabTextAppearance="?android:textAppearance"
                 app:tabIndicatorColor="@color/colorBlanc"
                 android:background="@color/colorPrimary"/>
