--- a/app/src/main/res/layout/item_artiste.xml
+++ b/app/src/main/res/layout/item_artiste.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/grande_taille"
     android:layout_height="135dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_artiste">
+    app:cardCornerRadius="@dimen/micro_petite_marge"
+    android:layout_margin="@dimen/micro_petite_marge">
 
     <RelativeLayout
-        android:layout_width="@dimen/moyenne_taille"
-        android:layout_height="@dimen/moyenne_taille"
-        android:background="@drawable/circle"
-        android:id="@+id/relaTop"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true">
+        android:layout_width="@dimen/grande_taille"
+        android:layout_height="135dp"
+        android:id="@+id/item_artiste"
+        android:padding="@dimen/micro_petite_marge">
 
         <RelativeLayout
-            android:layout_width="95dp"
-            android:layout_height="95dp"
-            android:layout_centerInParent="true"
+            android:layout_width="@dimen/moyenne_taille"
+            android:layout_height="@dimen/moyenne_taille"
             android:background="@drawable/circle"
-            android:backgroundTint="@color/colorback">
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:id="@+id/imgArtist"
+            android:id="@+id/relaTop"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true">
+
+            <RelativeLayout
+                android:layout_width="99.9dp"
+                android:layout_height="99.9dp"
                 android:layout_centerInParent="true"
-                android:src="@mipmap/ic_launcher_round"/>
+                android:background="@drawable/circle"
+                android:backgroundTint="@color/colorback">
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imgArtist"
+                    android:layout_centerInParent="true"
+                    android:src="@mipmap/ic_launcher_round"/>
+            </RelativeLayout>
+
         </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/pseudoUser"
+            android:layout_below="@id/relaTop"
+            android:layout_marginLeft="@dimen/micro_petite_marge"
+            android:layout_marginRight="@dimen/micro_petite_marge"
+            android:maxLines="1"
+            android:layout_marginTop="@dimen/tres_petite_marge"
+            android:textSize="@dimen/tres_petite_police"
+            android:textAppearance="?android:textAppearance"
+            android:fontFamily="@font/comfortaa_light"
+            android:textAlignment="center"
+            android:text="@string/pseudo"/>
 
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pseudoUser"
-        android:layout_below="@id/relaTop"
-        android:layout_margin="@dimen/micro_petite_marge"
-        android:textAppearance="?android:textAppearance"
-        android:fontFamily="@font/comfortaa_light"
-        android:textAlignment="center"
-        android:text="@string/pseudo"/>
-
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
