--- a/app/src/main/res/drawable/ic_short_text_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_short_text_black_24dp.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#470000"
+<vector android:height="24dp" android:tint="#fff"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M4,9h16v2L4,11zM4,13h10v2L4,15z"/>
+    <path android:fillColor="#fff" android:pathData="M4,9h16v2L4,11zM4,13h10v2L4,15z"/>
 </vector>
