--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -39,15 +39,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        app:itemBackground="@color/colorBlanc"
         app:itemHorizontalTranslationEnabled="true"
         android:layout_alignParentBottom="true"
         android:fontFamily="@font/comfortaa_bold"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
         android:fitsSystemWindows="true"
-        app:itemIconTint="@drawable/tab_color"
-        app:itemTextColor="@drawable/tab_color"
+        app:itemIconTint="@color/tabs"
+        app:itemTextColor="@color/tabs"
         app:labelVisibilityMode="labeled"
         app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:menu="@menu/accueil_menu" />
