--- a/app/src/main/res/layout/activity_detail_music.xml
+++ b/app/src/main/res/layout/activity_detail_music.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/papierpeint"
+        android:visibility="gone"
         android:scaleType="centerCrop"/>
 
     <androidx.appcompat.widget.Toolbar
