--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -16,7 +16,7 @@
         android:gravity="center_vertical"
         android:text="@string/app_name"
         android:layout_weight="1"
-        android:textColor="@color/colorBtn"
+        android:textColor="@android:color/white"
         android:textAppearance="?android:textAppearanceLarge"
         android:fontFamily="@font/carter_one"
         android:id="@+id/txtTitre"
@@ -26,5 +26,5 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@android:color/white"/>
 </LinearLayout>
