--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -104,7 +104,7 @@
                     android:id="@+id/partager"
                     android:background="@android:color/transparent"
                     android:layout_gravity="center"
-                    android:tint="@color/cardview_shadow_start_color"
+                    android:tint="@android:color/white"
                     android:src="@drawable/ic_reply_black_24dp"
                     android:layout_weight="1"/>
 
@@ -121,14 +121,13 @@
                         android:text="0"
                         android:id="@+id/txtLikes"
                         android:layout_gravity="center"
-                        android:textAppearance="?android:textAppearance"
-                        android:textColor="@android:color/black"/>
+                        android:textAppearance="?android:textAppearance"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/tres_petite_marge"
                         android:id="@+id/imgLikes"
-                        android:src="@drawable/ic_favorite_border_black_24dp"/>
+                        android:src="@drawable/star_outline"/>
                 </LinearLayout>
             </LinearLayout>
 
